# orchestune

./: .gitignore  .gitleaks.toml  CONTRIBUTING.ja.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  implementation_plan.md  pyproject.toml  walkthrough.md
.agents/: AGENTS.md
.claude/: settings.json
.github/: issue_template.md  pull_request_template.md
orchestune/: bootstrap.py  cli.py  dag.py  dag_cli.py  dag_contracts.py  dag_graph.py  dag_models.py  dag_parsing.py  dag_similarity.py  dispatch_actor_verification.py  dispatch_config.py  dispatch_cycle.py  dispatch_escalation.py  dispatch_gc.py  dispatch_launch.py  dispatch_locks.py  dispatch_rebase.py  dispatch_recovery.py  dispatch_report.py  dispatch_result.py  dispatch_rules.py  dispatch_scoring.py  dispatch_self_healing.py  dispatch_state.py  dispatch_targets.py  dispatch_worktree.py  dispatcher.py  forge.py  github.py  integration_coordinator.py  integrator.py  integrator_git_ops.py  integrator_pr.py  integrator_tasks.py  integrator_worktree.py  monitor.py  not_needed_review_state.py  parent_completion.py  setup_skills.py  version.py
scripts/: local-ci.sh  setup-git-hooks.sh
tests/: test_bootstrap.py  test_ci_workflow.py  test_cli.py  test_closed_loop.py  test_dag.py  test_dag_contracts.py  test_dispatch_actor_verification.py  test_dispatch_cycle.py  test_dispatch_escalation.py  test_dispatch_gc.py  test_dispatch_launch.py  test_dispatch_locks.py  test_dispatch_rebase.py  test_dispatch_recovery.py  test_dispatch_rules.py  test_dispatch_scoring.py  test_dispatch_state.py  test_dispatch_targets.py  (+13 more)
(+18 files in other folders)
