[tool.poetry]
name = "orchestune"
version = "0.1.0"
description = "Multi-agent implementation orchestrator (DAG construction, dispatch cycles, self-healing)"
authors = ["sshioyama"]
packages = [{include = "orchestune"}]
include = [
    { path = "skills/orchestune", format = ["sdist", "wheel"] },
    { path = "skills/orchestune-dispatch", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"

[tool.poetry.scripts]
orchestune = "orchestune.cli:main"
orchestune-dispatch = "orchestune.dispatcher:main"
orchestune-dag = "orchestune.dag:main"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2,<10.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.10"
mypy = "^1.10.1"
types-pyyaml = "^6.0.12.20240311"
pytest-xdist = "^3.8.0"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=orchestune --cov-fail-under=75 --cov-report=term-missing"
markers = [
    "uses_real_file_lock: exercises the real fcntl-based Integrator worktree lock instead of the autouse no-op stub",
]
